--- a/PCSide/OCP/OCP/packages.config
+++ b/PCSide/OCP/OCP/packages.config
@@ -5,4 +5,5 @@
   <package id="MetroFramework.Fonts" version="1.2.0.3" targetFramework="net472" />
   <package id="MetroFramework.RunTime" version="1.2.0.3" targetFramework="net472" />
   <package id="NAudio" version="1.9.0" targetFramework="net472" />
+  <package id="OpenHardwareMonitor" version="0.7.1" targetFramework="net472" />
 </packages>
